--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rebass/preset": "4.0.5",
     "@types/jest": "24.0.22",
     "@types/node": "12.12.7",
-    "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
+    "@types/styled-components": "4.4.0",
+    "emotion-theming": "10.0.19",
+    "normalize.css": "8.0.1",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-router-dom": "5.1.2",
     "react-scripts": "3.2.0",
+    "rebass": "4.0.7",
+    "styled-components": "4.4.1",
     "typescript": "3.7.2"
   },
   "scripts": {
@@ -32,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "16.9.11"
   }
 }
