--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "type-check": "tsc -p ./tsconfig.json",
     "eject": "react-scripts eject",
     "lint": "tslint -p ./tsconfig.json -c ./tslint.json --fix",
-    "pretty": "prettier 'src/**/*.js' --write"
+    "pretty": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -57,8 +57,8 @@
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.2.1",
+    "babel-eslint": "10.0.3",
+    "eslint": "6.2.1",
     "eslint-config-prettier": "6.1.0",
     "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-react": "7.14.3",
