--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
     "@types/react-redux": "7.1.2",
+    "@types/react-router-dom": "^5.1.2",
     "@types/rebass": "4.0.3",
     "@types/styled-components": "4.4.0",
     "emotion-theming": "10.0.19",
@@ -64,7 +65,7 @@
     "eslint-plugin-react": "7.14.3",
     "husky": "3.0.4",
     "prettier": "1.18.2",
-    "tslint": "5.20.0",
+    "tslint": "^5.20.0",
     "tslint-react-hooks": "2.2.1"
   }
 }
