--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@google-cloud/speech": "3.4.0",
     "@google-cloud/storage": "4.1.3",
+    "@rebass/forms": "4.0.6",
     "@rebass/preset": "4.0.5",
     "@types/jest": "24.0.22",
     "@types/node": "12.12.7",
