--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    //"jsx": "preserve",
     "jsx": "react",
   },
   "include": [
