--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "npm": "6.1.0"
   },
   "dependencies": {
+    "@apollo/react-hooks": "3.1.3",
     "@google-cloud/speech": "3.4.0",
     "@google-cloud/storage": "4.1.3",
     "@rebass/forms": "4.0.6",
@@ -19,9 +20,12 @@
     "@types/react-router-dom": "5.1.2",
     "@types/rebass": "4.0.3",
     "@types/styled-components": "4.4.0",
+    "apollo-boost": "0.4.7",
     "emotion-theming": "10.0.19",
+    "graphql": "14.6.0",
     "normalize.css": "8.0.1",
     "react": "16.11.0",
+    "react-apollo": "3.1.3",
     "react-dom": "16.11.0",
     "react-particles-js": "2.7.0",
     "react-redux": "7.1.1",
